Bug 256667 - systray icon remains the same when going offline
Summary: systray icon remains the same when going offline
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: Main Application (other bugs)
Version First Reported In: unspecified
Platform: FreeBSD Ports FreeBSD
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-12 10:49 UTC by Adriaan
Modified: 2011-03-08 03:54 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.1
Sentry Crash Report:


Attachments
patch-kopete-systemtray.cpp (417 bytes, patch)
2010-11-12 15:13 UTC, Adriaan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Adriaan 2010-11-12 10:49:29 UTC
Version:           unspecified (using KDE 4.5.2) 
OS:                FreeBSD

When going offline again, the systray icon remains the same. So it shows whichever status it was in before disconnecting.

Reproducible: Always

Steps to Reproduce:
Go online and to a status that changes the systray icon.
Go offline.

Actual Results:  
Icon should change, while it doesn't.

Expected Results:  
The icon should change again.
Maybe a specific icon for the offline status is missing. Because when the program is started (status 'offline') the systray icon is the same as in the 'online' status. Maybe some grayscale version of this icon would be nice.

OS: FreeBSD (i386) release 8.1-RELEASE-p1
Compiler: cc
Comment 1 Adriaan 2010-11-12 15:13:16 UTC
Created attachment 53360 [details]
patch-kopete-systemtray.cpp
Comment 2 Adriaan 2010-11-12 15:16:55 UTC
It seems to be an icon theme related problem. I haven't got the default oxygen theme running, but the 'KDE 4 Crystal Diamond Icons' theme.
Weird though, the icon 'kopete-offline' does exist, yet it doesn't seem to work when addressed by kopete. There is however an alternative called 'kopete_offline' which does work.
I also added a line to remove the overlay again.

See the patch in attachment. This does the trick for me, yet it may not be a general solution. I'm not really familiar with KDE code.
Comment 3 Lamarque V. Souza 2011-02-09 03:36:00 UTC
SVN commit 1219491 by lvsouza:

Uses user-offline.png as icon overlay to make it more
visible when user is offline.

OBS: I do not like using only color/grayscale icons
to indicate online/offline status, specially when
the icons are small and look very alike.

BUG: 256667


 M  +1 -0      systemtray.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1219491
Comment 4 Lamarque V. Souza 2011-02-09 03:37:48 UTC
SVN commit 1219492 by lvsouza:

Backport r1219491 by lvsouza from trunk to the 4.6 branch:

Uses user-offline.png as icon overlay to make it more
visible when user is offline.

OBS: I do not like using only color/grayscale icons
to indicate online/offline status, specially when
the icons are small and look very alike.

CCBUG: 256667


 M  +1 -0      systemtray.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1219492