Uses user-offline.png as icon overlay to make it more visible when user is offline.

OBS: I do not like using only color/grayscale icons
to indicate online/offline status, specially when
the icons are small and look very alike.

BUG: 256667

svn path=/trunk/KDE/kdenetwork/kopete/; revision=1219491